--- a/src/traffic_classifier/CMakeLists.txt
+++ b/src/traffic_classifier/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(mini_challenge_3)
+project(traffic_classifier)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -106,7 +106,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES mini_challenge_3
+#  LIBRARIES traffic_classifier
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
@@ -121,13 +121,10 @@ include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
 )
-add_executable(closed_loop_traffic src/closed_loop_controller.cpp)
-target_link_libraries(closed_loop_traffic ${catkin_LIBRARIES})
-
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/mini_challenge_3.cpp
+#   src/${PROJECT_NAME}/traffic_classifier.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -138,7 +135,7 @@ target_link_libraries(closed_loop_traffic ${catkin_LIBRARIES})
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/mini_challenge_3_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/traffic_classifier_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -202,7 +199,7 @@ target_link_libraries(closed_loop_traffic ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_mini_challenge_3.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_traffic_classifier.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
