--- a/src/traffic_classifier/CMakeLists.txt
+++ b/src/traffic_classifier/CMakeLists.txt
@@ -13,11 +13,15 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   nav_msgs
+  cv_bridge
+  sensor_msgs
+  vision_msgs
+  image_transport
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-
+find_package(OpenCV 4.5.5 REQUIRED)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
