--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -12,9 +12,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  rocon_std_msgs
   geometry_msgs
   nav_msgs
-
 )
 
 ## System dependencies are found with CMake's conventions
